<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_menu">About</string>
    <string name="about_text">OpenVPN Connect %s (build %d)</string>
    <string name="action_required">Your VPN Connection was interrupted</string>
    <string name="add_proxy">Add Proxy</string>
    <string name="add_routes">OpenVPN: Adding routes</string>
    <string name="add_shortcut_app">Add App Shortcut</string>
    <string name="add_shortcut_connect">Add Connect Shortcut</string>
    <string name="add_shortcut_disconnect">Add Disconnect Shortcut</string>
    <string name="add_shortcut_help_text">Create a Connect shortcut for a given profile on your home page. When you touch the shortcut, the profile will automatically connect.</string>
    <string name="add_shortcut_menu">Add Shortcut</string>
    <string name="advanced_menu">Advanced</string>
    <string name="alert_description">Alert</string>
    <string name="alt_proxy_summary">Enable Private Tunnel proxy (for Private Tunnel profiles only)</string>
    <string name="alt_proxy_title">Private Tunnel Proxy</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aon_request_creds">OpenVPN AlwaysOn Authentication</string>
    <string name="app">OpenVPN Connect</string>
    <string name="app_name">RNSpinkit</string>
    <string name="app_shortcut_title">OpenVPN Connect</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apprate_dismiss">No thanks</string>
    <string name="apprate_message">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="apprate_rate">Rate it!</string>
    <string name="apprate_remind_later">Remind me later</string>
    <string name="apprate_title">Rate %s</string>
    <string name="ar_accept">Accept</string>
    <string name="ar_cancel">Cancel</string>
    <string name="ar_title">Profile available for import</string>
    <string name="ar_warn_replace">Note: existing profile will be replaced</string>
    <string name="assign_ip">OpenVPN: Assigning IP address</string>
    <string name="auth">OpenVPN: Authenticating</string>
    <string name="auth_failed">OpenVPN Authentication failed</string>
    <string name="auth_pending">OpenVPN Authentication pending</string>
    <string name="auth_pending_failed">OpenVPN Service is unavailable</string>
    <string name="auto_keyboard_summary">Automatically raise/dismiss soft keyboard</string>
    <string name="auto_keyboard_title">Auto Keyboard</string>
    <string name="autologin_suffix">/autologin</string>
    <string name="autostart_finish_on_connect_summary">When VPN connection is launched from a shortcut or automatically on reboot, and no user input is required to authenticate connection, minimize the app after VPN connects.</string>
    <string name="autostart_finish_on_connect_title">Shortcut Minimize</string>
    <string name="autostart_summary">If a VPN connection is active on device shutdown, try to reconnect it on reboot</string>
    <string name="autostart_title">Reconnect on reboot</string>
    <string name="basic_auth_proxy_error">Using a Proxy server with basic authentication is not secure!</string>
    <string name="beta_expire_warn">Note: This beta expires on %s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bytes_in">Bytes in</string>
    <string name="bytes_out">Bytes out</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\10</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open Debugger</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">Dismiss\10(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector">Show Element Inspector</string>
    <string name="catalyst_inspector_stop">Hide Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_debugger_error">Failed to open debugger. Please check that the dev server is running and reload the app.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">Reload\10(R, R)</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_disable">Disable Sampling Profiler</string>
    <string name="catalyst_sample_profiler_enable">Enable Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="cert_error_header_text">Certificate error:</string>
    <string name="cert_verify_fail">OpenVPN server certificate verification failed</string>
    <string name="cert_warn_accept">Accept</string>
    <string name="cert_warn_reject">Reject</string>
    <string name="cert_warn_title">Accept Invalid Certificate?</string>
    <string name="channel_description">OpenVPN notifications</string>
    <string name="channel_name">OpenVPN</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_halt">OpenVPN client was halted by server</string>
    <string name="client_ip">Client IP</string>
    <string name="client_restart">OpenVPN client was restarted by server</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_name">Common name:</string>
    <string name="compress_error">Compress/decompress errors on data channel.</string>
    <string name="compression_summary">Tunnel compression options</string>
    <string name="compression_title">Compression</string>
    <string name="config_file_parse_error">Error parsing OpenVPN configuration file</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="conn_timeout_summary">How long should OpenVPN try to connect before giving up?</string>
    <string name="conn_timeout_title">Connection Timeout</string>
    <string name="connect">Connect</string>
    <string name="connected">OpenVPN: Connected</string>
    <string name="connecting">OpenVPN: Connecting...</string>
    <string name="connection_timeout">OpenVPN Connection Timeout</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="core_thread_abandoned">OpenVPN Disconnected (core thread detached)</string>
    <string name="core_thread_active">OpenVPN: Starting</string>
    <string name="core_thread_done">OpenVPN core done</string>
    <string name="core_thread_error">OpenVPN core error</string>
    <string name="cr_cancel">Cancel</string>
    <string name="cr_continue">Continue</string>
    <string name="cr_error">Error rendering challenge/response</string>
    <string name="cr_title">Server Challenge</string>
    <string name="create_shortcut_cancel">Cancel</string>
    <string name="create_shortcut_prompt">Profile shortcut name:</string>
    <string name="create_shortcut_title">Create Connect Shortcut</string>
    <string name="create_shortcut_yes">Create Shortcut</string>
    <string name="creds_error">OpenVPN credentials error</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="delete_profile_confirm_cancel">Cancel</string>
    <string name="delete_profile_confirm_title">Confirm Delete Profile</string>
    <string name="delete_profile_confirm_yes">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_shortcut_title">Disconnect</string>
    <string name="disconnected">OpenVPN: Disconnected</string>
    <string name="expires_on">Expires on:</string>
    <string name="fingerprints">Fingerprints:</string>
    <string name="issued_by">Issued by:</string>
    <string name="issued_on">Issued on:</string>
    <string name="issued_to">Issued to:</string>
    <string name="org_name">Organization:</string>
    <string name="org_unit">Organizational unit:</string>
    <string name="serial_number">Serial number:</string>
    <string name="sha1_fingerprint">SHA-1 fingerprint:</string>
    <string name="sha256_fingerprint">SHA-256 fingerprint:</string>
    <string name="validity_period">Validity:</string>
</resources>