<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="left" android:orientation="vertical" android:id="@+id/body" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:id="@+id/cert_error_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp" android:text="@string/cert_error_header_text"/>
        <TextView android:id="@+id/cert_error" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <ImageView android:gravity="fill_horizontal" android:id="@+id/title_separator" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:src="@android:drawable/divider_horizontal_dark" android:scaleType="fitXY" android:layout_weight="1"/>
        <TextView android:textStyle="bold" android:id="@+id/issued_to_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp" android:text="@string/issued_to"/>
        <TextView android:id="@+id/to_common_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/common_name"/>
        <TextView android:id="@+id/to_common" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/to_org_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/org_name"/>
        <TextView android:id="@+id/to_org" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/to_org_unit_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/org_unit"/>
        <TextView android:id="@+id/to_org_unit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/serial_number_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/serial_number"/>
        <TextView android:id="@+id/serial_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:textStyle="bold" android:id="@+id/issued_to_header2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp" android:text="@string/issued_by"/>
        <TextView android:id="@+id/by_common_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/common_name"/>
        <TextView android:id="@+id/by_common" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/by_org_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/org_name"/>
        <TextView android:id="@+id/by_org" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/by_org_unit_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/org_unit"/>
        <TextView android:id="@+id/by_org_unit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:textStyle="bold" android:id="@+id/validity_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp" android:text="@string/validity_period"/>
        <TextView android:id="@+id/issued_on_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/issued_on"/>
        <TextView android:id="@+id/issued_on" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/expires_on_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/expires_on"/>
        <TextView android:id="@+id/expires_on" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:textStyle="bold" android:id="@+id/fingerprints" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp" android:text="@string/fingerprints"/>
        <TextView android:id="@+id/sha256_fingerprint_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/sha256_fingerprint"/>
        <TextView android:id="@+id/sha256_fingerprint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
        <TextView android:id="@+id/sha1_fingerprint_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/sha1_fingerprint"/>
        <TextView android:id="@+id/sha1_fingerprint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="7dp"/>
    </LinearLayout>
</ScrollView>
